--- a/web-ui/summary.html
+++ b/web-ui/summary.html
@@ -342,8 +342,9 @@
     <div class="modal-dialog modal-dialog-centered modal-xm"
          role="document">
       <div class="modal-content">
-        <div class="pt-3 pb-2 bg-orange text-white text-center shadow " style="border-top-left-radius: 40px !important; 
-        border-top-right-radius: 40px !important; ">
+        <div class="pt-3 pb-2 bg-orange text-white text-center shadow "
+             style="border-top-left-radius: 20px ; 
+        border-top-right-radius: 20px !important; ">
           <h4>Xếp hạng</h4>
 
         </div>
@@ -351,29 +352,61 @@
           <table class="table table-bordered">
             <thead>
               <tr>
-                <th scope="col">#</th>
+                <th scope="col"
+                    class="text-center">#</th>
                 <th scope="col">Tên skill</th>
 
               </tr>
             </thead>
             <tbody>
               <tr>
-                <th scope="row">1</th>
+                <th scope="row"
+                    class="text-center">1</th>
                 <td>Mark</td>
 
               </tr>
               <tr>
-                <th scope="row">2</th>
+                <th scope="row"
+                    class="text-center">2</th>
                 <td>Jacob</td>
 
               </tr>
               <tr>
-                <th scope="row">3</th>
+                <th scope="row"
+                    class="text-center">3</th>
                 <td>Larry the Bird</td>
 
               </tr>
             </tbody>
           </table>
+        </div>
+        <div class="modal-footer justify-content-center">
+
+          <ul class="pagination ">
+            <li class="page-item">
+              <a class="page-link"
+                 href="#"
+                 aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+                <span class="sr-only">Previous</span>
+              </a>
+            </li>
+            <li class="page-item"><a class="page-link pagi-button-selected"
+                 href="#">1</a></li>
+            <li class="page-item"><a class="page-link"
+                 href="#">2</a></li>
+            <li class="page-item"><a class="page-link"
+                 href="#">3</a></li>
+            <li class="page-item">
+              <a class="page-link"
+                 href="#"
+                 aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+                <span class="sr-only">Next</span>
+              </a>
+            </li>
+          </ul>
+
         </div>
       </div>
     </div>
