Update Tuyen dung UI banner, delete unused pages - MinhTHD

--- a/web-ui/result.html
+++ b/web-ui/result.html
@@ -85,7 +85,6 @@
             </div>
             <div class="row justify-content-around">
                 <div class="col-md-3 text-center result-smaller"
-                     style="pointer-events: auto;"
                      data-toggle="modal"
                      data-target="#JobDescriptionModal">
                     <span style="font-size: 45px; color:#ff6414; font-weight: bold;">2</span>
@@ -103,8 +102,7 @@
                              alt="sdad"> -->
                     </div>
                 </div>
-                <div class="col-md-3 text-center result"
-                     style="pointer-events: auto; ">
+                <div class="col-md-3 text-center result">
                     <span style="font-size: 45px; color:#ff6414; font-weight: bold;">1</span>
                     <div id="suggest1">
                         <!-- <br>
@@ -121,8 +119,7 @@
                              alt="sdad"> -->
                     </div>
                 </div>
-                <div class="col-md-3 text-center result-smaller"
-                     style="pointer-events: auto;">
+                <div class="col-md-3 text-center result-smaller">
                     <span style="font-size: 45px; color:#ff6414; font-weight: bold;">3</span>
                     <div id="suggest3">
                         <!-- <br>
