--- a/web-ui/summary.html
+++ b/web-ui/summary.html
@@ -274,58 +274,48 @@
             <div class="col-md-3 text-center banner ">
               <span style="font-size: 55px; color:#ff6414">2</span>
               <br><br>
-              <b style="color:rgb(241, 236, 236); font-size:3em">Amazon</b><br><br>
-              <div class="card">
-                <ul class="list-group list-group-flush">
-                  <li style="font-size:1.2em"
-                      class="list-group-item">15 vị trí</li>
-                  <li style="font-size:1.2em"
-                      class="list-group-item">Đang tuyển dụng</li>
-                </ul>
-              </div>
+              <b style="color:rgb(241, 236, 236); font-size:3em">Amazon</b><br>
               <img src="..\web-ui\images\companyA.png"
                    alt="Hình công ty"
-                   height="100"
-                   width="200"
-                   style="margin-top:80px"><br>
+                   height="120"
+                   width="220"
+                   class="img-recruitment">
+              <div class="info-recruitment">
+                <h3> 15 vị trí</h3>
+                <h3>Đang tuyển dụng</h3>
+              </div>
+
             </div>
 
             <div class="col-md-4 text-center banner"
                  style="height:700px; width:280px;">
               <span style="font-size: 70px; color:#ff6414">1</span><br><br>
-              <b style="color:rgb(241, 236, 236); font-size:5em">Grab</b><br><br>
-              <div class="card">
-                <ul class="list-group list-group-flush">
-                  <li style="font-size:1.2em"
-                      class="list-group-item">15 vị trí</li>
-                  <li style="font-size:1.2em"
-                      class="list-group-item">Đang tuyển dụng</li>
-                </ul>
-              </div>
+              <b style="color:rgb(241, 236, 236); font-size:5em">Grab</b><br>
               <img src="..\web-ui\images\companyB.svg"
                    alt="Hình công ty"
-                   height="120"
-                   width="220"
-                   style="margin-top:120px;"><br>
+                   height="140"
+                   width="240"
+                   class="img-recruitment">
+              <div class="info-recruitment">
+                <h3> 15 vị trí</h3>
+                <h3>Đang tuyển dụng</h3>
+              </div>
+
             </div>
 
             <div class="col-md-3 text-center banner">
 
               <span style="font-size: 55px; color:#ff6414">3</span><br><br>
-              <b style="color:rgb(241, 236, 236); font-size:3em">RXR</b><br><br>
-              <div class="card">
-                <ul class="list-group list-group-flush">
-                  <li style="font-size:1.2em"
-                      class="list-group-item">15 vị trí</li>
-                  <li style="font-size:1.2em"
-                      class="list-group-item">Đang tuyển dụng</li>
-                </ul>
-              </div>
+              <b style="color:rgb(241, 236, 236); font-size:3em">RXR</b><br>
               <img src="..\web-ui\images\companyC.png"
                    alt="Hình công ty"
-                   height="80"
-                   width="160"
-                   style="margin-top:100px"><br>
+                   height="120"
+                   width="220"
+                   class="img-recruitment">
+              <div class="info-recruitment">
+                <h3> 15 vị trí</h3>
+                <h3>Đang tuyển dụng</h3>
+              </div>
             </div>
           </div>
         </div>
