--- a/web-ui/jobdetail-alternative.html
+++ b/web-ui/jobdetail-alternative.html
@@ -56,30 +56,31 @@
 
         <div id="content"
              class="tab-content col-md-12 folder">
-            <div class="row justify-content-center">
-                <div style="background-color: white; margin-top:-50px; border-radius:20px">
-                    <a href="#">
-                        <img alt="Neos Corp Vietnam Big Logo"
-                             src="https://cdn.itviec.com/employers/neos-corp/logo/w170/neos-corp-logo.jpg?S3qwxYSQVPqEkYFf4oojSQXU"
-                             style="margin:15px;"
-                             width="250"
-                             height="250">
-                    </a>
+            <div class="top-background">
+                <div class="row justify-content-center">
+                    <div style="background-color: white; margin-top:-50px; border-radius:20px">
+                        <a href="#">
+                            <img alt="Neos Corp Vietnam Big Logo"
+                                 src="https://cdn.itviec.com/employers/neos-corp/logo/w170/neos-corp-logo.jpg?S3qwxYSQVPqEkYFf4oojSQXU"
+                                 style="margin:15px;"
+                                 width="250"
+                                 height="250">
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <!-- Company summary detail div -->
+                <div class="row">
+                    <!-- Company summary detail div -->
 
 
 
-                <!-- div each row of a job -->
+                    <!-- div each row of a job -->
 
 
 
-                <div class="col-md-12">
-                    <div>
-                        <!-- <h2>Developer</h2> -->
-                        <!-- <p>
+                    <div class="col-md-12">
+                        <div>
+                            <!-- <h2>Developer</h2> -->
+                            <!-- <p>
                                 <a href="http://google.com"
                                    class="btn btn-outline-dark btn-sm">iOS</a>
                                 <a href="http://google.com"
@@ -89,57 +90,57 @@
                                    class="btn btn-outline-dark btn-sm">Swift</a>
                             </p> -->
 
-                        <!-- <p> Knorex develops a cloud-based, highly scalable, all-in-one advertising and marketing
+                            <!-- <p> Knorex develops a cloud-based, highly scalable, all-in-one advertising and marketing
                                 platform called
                                 Knorex XPO™ (https://xpo.knorex.com/) where.. </p> -->
-                        <div class="row justify-content-center">
-                            <!-- <div class="col-sm-6">
+                            <div class="row justify-content-center">
+                                <!-- <div class="col-sm-6">
                                 <p>Ngày đăng: <span>20/10/2018</span></p>
                             </div>
                             <div class="col-sm-6">Ngày hết hạn: <span>31/10/2018</span></div> -->
-                            <ul class="list-group text-center">
-                                <li class="list-group-item bg-orange text-white">
-                                    <h3>Developer</h3>
-                                </li>
-                                <li class="list-group-item">Ngày đăng: <span>20/10/2018</span></li>
-                                <li class="list-group-item">Ngày hết hạn: <span>31/10/2018</span></li>
-                            </ul>
+                                <ul class="list-group text-center">
+                                    <li class="list-group-item bg-orange text-white">
+                                        <h3>Developer</h3>
+                                    </li>
+                                    <li class="list-group-item">Ngày đăng: <span>20/10/2018</span></li>
+                                    <li class="list-group-item">Ngày hết hạn: <span>31/10/2018</span></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-
                 </div>
-            </div>
 
-            <div class="row  justify-content-around">
-                <div class="job-descript job-detail col-md-3 text-center">
-                    <img src="./images/question.png"
-                         alt="..."
-                         width="100"
-                         width="100"><br>
-                    <h2>Mô tả công việc</h2>
-                    <div>
-                        Thông tin mô tả ở chỗ này nha Dy
+                <div class="row  justify-content-center">
+                    <div class="job-descript job-detail1 col-md-4 text-center">
+                        <img src="./images/question.png"
+                             alt="..."
+                             width="50"
+                             width="50"><br><br>
+                        <h2>Mô tả công việc</h2>
+                        <div>
+                            Thông tin mô tả ở chỗ này nha Dy
+                        </div>
                     </div>
-                </div>
-                <div class="job-requirement job-detail col-md-3 text-center">
-                    <img src="./images/requirement.png"
-                         alt="..."
-                         width="100"
-                         width="100"><br>
-                    <h2>Yêu cầu công việc</h2>
-                    <div>
-                        Đây nữa nha Dy
+                    <div class="job-requirement job-detail2 col-md-4 text-center">
+                        <img src="./images/requirement.png"
+                             alt="..."
+                             width="50"
+                             width="50"><br><br>
+                        <h2>Yêu cầu công việc</h2>
+                        <div>
+                            Đây nữa nha Dy
+                        </div>
                     </div>
-                </div>
-                <div class="skill-require job-detail col-md-3 text-center">
-                    <img src="./images/skill.png"
-                         alt="..."
-                         width="100"
-                         width="100"><br>
-                    <h2>Kỹ năng cần thiết</h2>
-                    <div>Hi Hi</div>
-                </div>
+                    <div class="skill-require job-detail3 col-md-4 text-center">
+                        <img src="./images/skill.png"
+                             alt="..."
+                             width="50"
+                             width="50"><br><br>
+                        <h2>Kỹ năng cần thiết</h2>
+                        <div>Hi Hi</div>
+                    </div>
 
+                </div>
             </div>
         </div>
     </div>
