Update jobdetail alternative UI - MinhTHD

--- a/web-ui/jobdetail-alternative.html
+++ b/web-ui/jobdetail-alternative.html
@@ -98,13 +98,37 @@
                                 <p>Ngày đăng: <span>20/10/2018</span></p>
                             </div>
                             <div class="col-sm-6">Ngày hết hạn: <span>31/10/2018</span></div> -->
-                                <ul class="list-group text-center">
+                                <!-- <ul class="list-group text-center">
                                     <li class="list-group-item bg-orange text-white">
                                         <h3>Developer</h3>
                                     </li>
                                     <li class="list-group-item">Ngày đăng: <span>20/10/2018</span></li>
                                     <li class="list-group-item">Ngày hết hạn: <span>31/10/2018</span></li>
-                                </ul>
+                                    <li class="list-group-item">Số lượng: <span>15 người</span></li>
+                                </ul> -->
+                                <table class="table table-hover text-center col-md-5 bg-white table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th class="bg-orange text-white">
+                                                <h3>Developer</h3>
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>
+                                                <div class="row justify-content-around my-auto">
+                                                    <div class="col-md-5">Ngày đăng: <span>20/10/2018</span></div>---<div
+                                                         class="col-md-5">Ngày hết hạn: <span>31/10/2018</span></div>
+                                                </div>
+                                            </td>
+                                            <!-- <td>Ngày hết hạn: <span>31/10/2018</span></td> -->
+                                        </tr>
+                                        <tr>
+                                            <td>Số lượng <span>15 người</span></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
