--- a/recruitment-form.html
+++ b/recruitment-form.html
@@ -307,41 +307,68 @@
 
                         <div class="masonry-item col-md-6">
                             <div class="bgc-white p-20 bd">
-                                <h3 class="c-grey-900">Partner Registration</h3>
+                                <h3 class="c-grey-900">New Recruitment</h3>
                                 <div class="mT-30">
                                     <form>
                                         <div class="form-group">
-                                            <label class="font-weight-bold" for="partner-name">Company Name</label>
-                                            <input type="text" class="form-control" id="partner-name" placeholder="Company Name">
+                                            <label class="font-weight-bold" for="recruitment-title">Recruitment
+                                                Title</label>
+                                            <input type="text" class="form-control" id="recruitment-title" placeholder="Recruitment Title">
+                                        </div>
+
+                                        <div class="form-row">
+                                            <div class="form-group col-md-6">
+                                                <label class="font-weight-bold" for="recruitment-due">Due Date</label>
+                                                <div class="timepicker-input input-icon form-group">
+                                                    <div class="input-group">
+                                                        <div class="input-group-addon">
+                                                            <span class="btn disabled"><i class="ti-calendar"></i></span>
+                                                        </div>
+                                                        <input type="text" class="form-control start-date" placeholder="Due Date"
+                                                            data-provide="datepicker" id="recruitment-due">
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="form-group col-md-6">
+                                                <label class="font-weight-bold" for="recruitment-number">Number of
+                                                    employees</label>
+                                                <input type="number" class="form-control" id="recruitment-number"
+                                                    placeholder="Number of employees" pattern="^[0-9]+$" title="Please input digits only.">
+                                            </div>
                                         </div>
 
                                         <div class="form-group">
-                                            <label class="font-weight-bold" for="partner-description">Introduction</label>
-                                            <textarea class="form-control" rows="5" id="partner-description"></textarea>
+                                            <label class="font-weight-bold" for="recruitment-description">Job
+                                                Description</label>
+                                            <textarea class="form-control" rows="5" id="recruitment-description"></textarea>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label class="font-weight-bold" for="recruitment-requirement">Job
+                                                Requirement</label>
+                                            <textarea class="form-control" rows="5" id="recruitment-requirement"></textarea>
                                         </div>
 
                                         <div class="form-row">
                                             <div class="form-group col">
-                                                <label class="font-weight-bold" for="partner-email">Email</label>
-                                                <input type="email" class="form-control" id="partner-email" placeholder="Email">
+                                                <label class="font-weight-bold" for="recruitment-email">Email</label>
+                                                <input type="email" class="form-control" id="recruitment-email"
+                                                    placeholder="Email">
                                             </div>
 
                                             <div class="form-group col-md-4">
-                                                <label class="font-weight-bold" for="partner-phone">Phone</label>
-                                                <input type="text" class="form-control" id="partner-phone" placeholder="Phone"
-                                                    pattern="^(?:0|\(?\+[0-9]{2}\)?\s?)[0-9]{3}(\s)?[0-9]{3}(\s)?[0-9]{3,4}$"
-                                                    title="Example: 098 187 5110, (+84) 981875110">
+                                                <label class="font-weight-bold" for="recruitment-phone">Phone</label>
+                                                <input type="text" class="form-control" id="recruitment-phone"
+                                                    placeholder="Phone" pattern="^(?:0|\(?\+[0-9]{2}\)?\s?)[0-9]{3}(\s)?[0-9]{3}(\s)?[0-9]{3,4}$"
+                                                    title="Example: 098 187 5110, (+84) 981 875 110...">
                                             </div>
                                         </div>
 
                                         <div class="form-group">
-                                            <label class="font-weight-bold" for="partner-address">Address</label>
-                                            <input type="text" class="form-control" id="partner-address" placeholder="Address">
-                                        </div>
-
-                                        <div class="form-group">
-                                            <label class="font-weight-bold" for="partner-logo">Logo</label>
-                                            <input type="file" class="form-control-file" id="partner-logo" accept="image/jpeg">
+                                            <label class="font-weight-bold" for="recruitment-address">Address</label>
+                                            <input type="text" class="form-control" id="recruitment-address"
+                                                placeholder="Address">
                                         </div>
 
                                         <div id="fields">
@@ -366,7 +393,7 @@
                                             </div>
                                         </div>
                                         <hr>
-                                        <button type="button" class="btn btn-lg btn-primary" onclick="submitForm()">Register</button>
+                                        <button type="button" class="btn btn-lg btn-primary" onclick="submitForm()">Post</button>
                                     </form>
                                 </div>
                             </div>
@@ -385,7 +412,7 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <script>
         var counter = $('#counter').val();
-
+        
         function getAdditionalInformation() {
             var addition = {};
             addition[$('#field-title').val()] = $('#field-info').val();
@@ -427,33 +454,24 @@
         }
 
         function submitForm() {
-            var partner = {
-                name: $('#partner-name').val(),
-                description: $('#partner-description').val(),
-                logo: '',
-                email: $('#partner-email').val(),
-                phone: $('#partner-phone').val(),
-                address: $('#partner-address').val(),
+            var recruitment = {
+                title: $('#recruitment-title').val(),
+                end_date: $('#recruitment-due').val(),
+                number: $('#recruitment-number').val(),
+                jobDescription: $('#recruitment-description').val(),
+                jobRequirement: $('#recruitment-requirement').val(),
+                email: $('#recruitment-email').val(),
+                phone: $('#recruitment-phone').val(),
+                address: $('#recruitment-address').val(),
                 additionalInformation: getAdditionalInformation()
             }
 
-            console.log(partner);
+            console.log(recruitment);
 
-            var logo = document.getElementById('partner-logo').files[0];
-
-            var formData = new FormData();
-            formData.append('partner', JSON.stringify(partner));
-            formData.append('file', logo);
-
-            axios.post('http://localhost:8080/companies', formData, {
-                headers: {
-                    'Content-Type': `multipart/form-data; boundary=${
-                        formData._boundary
-                        }`
-                }
-            }).then((response) => {
-                console.log(response);
-            })
+            // axios.post('http://localhost:8080/recruitment', recruitment)
+            //     .then((response) => {
+            //         console.log(response);
+            //     })
         }
     </script>
 </body>
