--- a/partner-registration.html
+++ b/partner-registration.html
@@ -81,74 +81,92 @@
     <div>
         <div class="sidebar">
             <div class="sidebar-inner">
-                <div class="sidebar-logo">
+                <div class="sidebar-logo bg-dark">
                     <div class="peers ai-c fxw-nw">
-                        <div class="peer peer-greed"><a class="sidebar-link td-n" href="index.html">
+                        <div class="peer peer-greed"><a class="sidebar-link td-n"
+                               href="index.html">
                                 <div class="peers ai-c fxw-nw">
-                                    <div class="peer">
-                                        <div class="logo"><img src="assets/static/images/logo.png" alt=""></div>
-                                    </div>
-                                    <div class="peer peer-greed">
-                                        <h5 class="lh-1 mB-0 logo-text">Adminator</h5>
-                                    </div>
+
+                                    <div class="logo justify-content-center"><img class="img-logo "
+                                             src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237101/demo-image/logoctsa.png"
+                                             alt="" ></div>
+
+
                                 </div>
                             </a></div>
                         <div class="peer">
-                            <div class="mobile-toggle sidebar-toggle"><a href="" class="td-n"><i class="ti-arrow-circle-left"></i></a></div>
+                            <div class="mobile-toggle sidebar-toggle"><a href=""
+                                   class="td-n"><i class="ti-arrow-circle-left"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <ul class="sidebar-menu scrollable pos-r">
-                    <li class="nav-item mT-30 active"><a class="sidebar-link" href="index.html"><span class="icon-holder"><i
-                                    class="c-blue-500 ti-home"></i> </span><span class="title">Dashboard</span></a></li>
-                    <li class="nav-item"><a class="sidebar-link" href="email.html"><span class="icon-holder"><i class="c-brown-500 ti-email"></i>
-                            </span><span class="title">Email</span></a></li>
-                    <li class="nav-item"><a class="sidebar-link" href="compose.html"><span class="icon-holder"><i class="c-blue-500 ti-share"></i>
-                            </span><span class="title">Compose</span></a></li>
-                    <li class="nav-item"><a class="sidebar-link" href="calendar.html"><span class="icon-holder"><i
-                                    class="c-deep-orange-500 ti-calendar"></i> </span><span class="title">Calendar</span></a></li>
-                    <li class="nav-item"><a class="sidebar-link" href="chat.html"><span class="icon-holder"><i class="c-deep-purple-500 ti-comment-alt"></i>
+                    <li class="nav-item mT-30 active"><a class="sidebar-link"
+                           href="index.html"><span class="icon-holder"><i class="c-blue-500 ti-home"></i> </span><span
+                                  class="title">Dashboard</span></a></li>
+                    <li class="nav-item"><a class="sidebar-link"
+                           href="email.html"><span class="icon-holder"><i class="c-brown-500 ti-email"></i> </span><span
+                                  class="title">Email</span></a></li>
+                    <li class="nav-item"><a class="sidebar-link"
+                           href="compose.html"><span class="icon-holder"><i class="c-blue-500 ti-share"></i> </span><span
+                                  class="title">Compose</span></a></li>
+                    <li class="nav-item"><a class="sidebar-link"
+                           href="calendar.html"><span class="icon-holder"><i class="c-deep-orange-500 ti-calendar"></i>
+                            </span><span class="title">Calendar</span></a></li>
+                    <li class="nav-item"><a class="sidebar-link"
+                           href="chat.html"><span class="icon-holder"><i class="c-deep-purple-500 ti-comment-alt"></i>
                             </span><span class="title">Chat</span></a></li>
-                    <li class="nav-item"><a class="sidebar-link" href="charts.html"><span class="icon-holder"><i class="c-indigo-500 ti-bar-chart"></i>
+                    <li class="nav-item"><a class="sidebar-link"
+                           href="charts.html"><span class="icon-holder"><i class="c-indigo-500 ti-bar-chart"></i>
                             </span><span class="title">Charts</span></a></li>
-                    <li class="nav-item"><a class="sidebar-link" href="forms.html"><span class="icon-holder"><i class="c-light-blue-500 ti-pencil"></i>
+                    <li class="nav-item"><a class="sidebar-link"
+                           href="forms.html"><span class="icon-holder"><i class="c-light-blue-500 ti-pencil"></i>
                             </span><span class="title">Forms</span></a></li>
-                    <li class="nav-item dropdown"><a class="sidebar-link" href="ui.html"><span class="icon-holder"><i
-                                    class="c-pink-500 ti-palette"></i> </span><span class="title">UI Elements</span></a></li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle" href="javascript:void(0);"><span class="icon-holder"><i
-                                    class="c-orange-500 ti-layout-list-thumb"></i> </span><span class="title">Tables</span>
-                            <span class="arrow"><i class="ti-angle-right"></i></span></a>
+                    <li class="nav-item dropdown"><a class="sidebar-link"
+                           href="ui.html"><span class="icon-holder"><i class="c-pink-500 ti-palette"></i> </span><span
+                                  class="title">UI Elements</span></a></li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle"
+                           href="javascript:void(0);"><span class="icon-holder"><i class="c-orange-500 ti-layout-list-thumb"></i>
+                            </span><span class="title">Tables</span> <span class="arrow"><i class="ti-angle-right"></i></span></a>
                         <ul class="dropdown-menu">
-                            <li><a class="sidebar-link" href="basic-table.html">Basic Table</a></li>
-                            <li><a class="sidebar-link" href="datatable.html">Data Table</a></li>
+                            <li><a class="sidebar-link"
+                                   href="basic-table.html">Basic Table</a></li>
+                            <li><a class="sidebar-link"
+                                   href="datatable.html">Data Table</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle" href="javascript:void(0);"><span class="icon-holder"><i
-                                    class="c-purple-500 ti-map"></i> </span><span class="title">Maps</span>
-                            <span class="arrow"><i class="ti-angle-right"></i></span></a>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle"
+                           href="javascript:void(0);"><span class="icon-holder"><i class="c-purple-500 ti-map"></i>
+                            </span><span class="title">Maps</span> <span class="arrow"><i class="ti-angle-right"></i></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="google-maps.html">Google Map</a></li>
                             <li><a href="vector-maps.html">Vector Map</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle" href="javascript:void(0);"><span class="icon-holder"><i
-                                    class="c-red-500 ti-files"></i> </span><span class="title">Pages</span>
-                            <span class="arrow"><i class="ti-angle-right"></i></span></a>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle"
+                           href="javascript:void(0);"><span class="icon-holder"><i class="c-red-500 ti-files"></i>
+                            </span><span class="title">Pages</span> <span class="arrow"><i class="ti-angle-right"></i></span></a>
                         <ul class="dropdown-menu">
-                            <li><a class="sidebar-link" href="blank.html">Blank</a></li>
-                            <li><a class="sidebar-link" href="404.html">404</a></li>
-                            <li><a class="sidebar-link" href="500.html">500</a></li>
-                            <li><a class="sidebar-link" href="signin.html">Sign In</a></li>
-                            <li><a class="sidebar-link" href="signup.html">Sign Up</a></li>
+                            <li><a class="sidebar-link"
+                                   href="blank.html">Blank</a></li>
+                            <li><a class="sidebar-link"
+                                   href="404.html">404</a></li>
+                            <li><a class="sidebar-link"
+                                   href="500.html">500</a></li>
+                            <li><a class="sidebar-link"
+                                   href="signin.html">Sign In</a></li>
+                            <li><a class="sidebar-link"
+                                   href="signup.html">Sign Up</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle" href="javascript:void(0);"><span class="icon-holder"><i
-                                    class="c-teal-500 ti-view-list-alt"></i> </span><span class="title">Multiple Levels</span>
-                            <span class="arrow"><i class="ti-angle-right"></i></span></a>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle"
+                           href="javascript:void(0);"><span class="icon-holder"><i class="c-teal-500 ti-view-list-alt"></i>
+                            </span><span class="title">Multiple Levels</span> <span class="arrow"><i class="ti-angle-right"></i></span></a>
                         <ul class="dropdown-menu">
                             <li class="nav-item dropdown"><a href="javascript:void(0);"><span>Menu Item</span></a></li>
                             <li class="nav-item dropdown"><a href="javascript:void(0);"><span>Menu Item</span> <span
-                                        class="arrow"><i class="ti-angle-right"></i></span></a>
+                                          class="arrow"><i class="ti-angle-right"></i></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="javascript:void(0);">Menu Item</a></li>
                                     <li><a href="javascript:void(0);">Menu Item</a></li>
@@ -156,12 +174,27 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle"
+                           href="javascript:void(0);"><span class="icon-holder"><i class="c-red-500 ti-files"></i>
+                            </span><span class="title">Base Data</span> <span class="arrow"><i class="ti-angle-right"></i></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a class="sidebar-link"
+                                   href="business-field.html">Business fields</a></li>
+                            <li><a class="sidebar-link"
+                                   href="position.html">Positions</a></li>
+                            <li><a class="sidebar-link"
+                                   href="skill.html">Skills</a></li>
+                            <li><a class="sidebar-link"
+                                   href="keyword.html">Keywords</a></li>
+
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
         <div class="page-container">
             <div class="header navbar">
-                <div class="header-container">
+                <div class="header-container bg-dark">
                     <ul class="nav-left">
                         <li><a id="sidebar-toggle" class="sidebar-toggle" href="javascript:void(0);"><i class="ti-menu"></i></a>
                         </li>
