--- a/web-ui/web-v0.7.1/jobdetail-alternative.html
+++ b/web-ui/web-v0.7.1/jobdetail-alternative.html
@@ -20,6 +20,17 @@
 </head>
 
 <body>
+        <div id="loader">
+                <div class="spinner"></div>
+            </div>
+            <script>
+                window.addEventListener('load', () => {
+                    const loader = document.getElementById('loader');
+                    setTimeout(() => {
+                        loader.classList.add('fadeOut');
+                    }, 300);
+                });
+            </script>
     <!-- Header -->
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark"
@@ -52,8 +63,6 @@
     </nav>
     <!-- End of Header -->
     <div class="container-fluid">
-
-
         <div id="content"
              class="tab-content col-md-12 folder">
             <div class="top-background">
