--- a/web-ui/web-v0.7.1/result.html
+++ b/web-ui/web-v0.7.1/result.html
@@ -38,6 +38,17 @@
 </head>
 
 <body>
+    <div id="loader">
+        <div class="spinner"></div>
+    </div>
+    <script>
+        window.addEventListener('load', () => {
+            const loader = document.getElementById('loader');
+            setTimeout(() => {
+                loader.classList.add('fadeOut');
+            }, 300);
+        });
+    </script>
     <!-- Header -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark"
          style="height: 45px">
