--- a/web-ui/web-v0.7.1/listjob.html
+++ b/web-ui/web-v0.7.1/listjob.html
@@ -24,12 +24,9 @@
                 <div class="spinner"></div>
             </div>
             <script>
-                window.addEventListener('load', () => {
-                    const loader = document.getElementById('loader');
-                    setTimeout(() => {
-                        loader.classList.add('fadeOut');
-                    }, 300);
-                });
+                $(window).ready(function () {
+            $('#loader').hide();
+        });
             </script>
     <!-- Header -->
 
