--- a/web-ui/web-v0.7.1/partner-registration.html
+++ b/web-ui/web-v0.7.1/partner-registration.html
@@ -45,11 +45,8 @@
         <div class="spinner"></div>
     </div>
     <script>
-        window.addEventListener('load', () => {
-            const loader = document.getElementById('loader');
-            setTimeout(() => {
-                loader.classList.add('fadeOut');
-            }, 300);
+        $(window).ready(function () {
+            $('#loader').hide();
         });
     </script>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark"
