--- a/web-ui/web-v0.7.1/recruitment-form.html
+++ b/web-ui/web-v0.7.1/recruitment-form.html
@@ -33,11 +33,8 @@
         <div class="spinner"></div>
     </div>
     <script>
-        window.addEventListener('load', () => {
-            const loader = document.getElementById('loader');
-            setTimeout(() => {
-                loader.classList.add('fadeOut');
-            }, 300);
+       $(window).ready(function () {
+            $('#loader').hide();
         });
     </script>
     <!-- Header -->
